# Website-Assets

./: .gitignore  README.md
.github/: pull_request_template.md
.github/workflows/: repo-actions_updater.yml  repo-pr_checks.yml  storefront-format_check.yml
fedex-integration/: .gitignore  field_values.md  main.py  misc.py  pyproject.toml  requirements.txt  response_sample.json
fedex-integration/data_models/: product_info.py
fedex-integration/fedex_resource/: fedex_freight.py  fedex_settings.py  fedex_token.py  postal_code.py
fedex-integration/shopify/: client.py  graphql_query.py  metaobject.py  product.py  shopify_settings.py
pdf-generation/: README.md  helpers.js  index.js  package-lock.json  package.json
storefront/: .prettierignore  config.yml.example
storefront/assets/: base.css  cart.js  component-pagination.css  createFlyer.js  facets.js  global.js  localization-form.js  main-cart-form-handler.js  main-cart-form.css  media-gallery.js  order-lookup.js  predictive-search.js  price-per-item.js  product-form.js  product-freight-estimator.js  product-info.js  product_inventory-table.css  quantity-popover.js  quick-add-bulk.js  quick-add.js  quick-order-list.js  section-main-product.css  section-multicolumn.css  show-more.js  theme-editor.js
storefront/config/: settings_data.json  settings_schema.json
storefront/layout/: theme.liquid
storefront/locales/: en.default.json  en.default.schema.json
storefront/sections/: collage.liquid  collapsible-content.liquid  collection-list.liquid  featured-blog.liquid  featured-collection.liquid  footer-group.json  (+22 more)
(+34 files in other folders)
