[tool.poetry]
name = "fedex-test"
version = "0.1.0"
description = ""
authors = ["Frank Chung <ponty33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pgeocode = "^0.5.0"
fastapi = "^0.115.0"
pydantic-settings = "^2.5.2"
loguru = "^0.7.2"
uvicorn = "^0.30.6"
requests = "^2.32.3"
httpx = "0.24.1"
spylib = "^0.10.3"
holidays = "^0.60"
apscheduler = "^3.11.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 99
skip_string_normalization = true

[tool.isort]
line_length = 99
profile = "black"
multi_line_output = 3